[*] healthcheck, manager update
